# top2vec_financiero

./: .gitignore  INICIAR_APP.bat  INSTALAR.bat  LEEME.txt  README.md  check_date_range.py  check_dates.py  pyproject.toml  requirements.txt  test_rapido.py
data/: README_DATOS.md
docs/: EMPEZAR_AQUI.md  GUIA_GITHUB.md  INSTRUCCIONES_PRIMERA_VEZ.md  MANUAL_USUARIO.md  PLANTILLA_MENSAJE.md  README_GITHUB.md  RESUMEN_EJECUTIVO.md  RESUMEN_PRIMERA_VEZ.md
modelos/: README_MODELOS.md
resultados/: README_RESULTADOS.md
src/: FAQ.md  INICIO_RAPIDO.md  README_APP.md  README_TECNICO.md  analisis_avanzado.py  app.py  configuracion.py  ejecutar_modelo.py
src/.streamlit/: config.toml
