[project]
name = "top2vec-para-economistas"
version = "1.0.0"
description = "An치lisis de t칩picos en noticias econ칩micas usando Top2Vec - Versi칩n simplificada para economistas"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "top2vec>=1.0.27",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "umap-learn>=0.5.3",
    "hdbscan>=0.8.33",
    "scikit-learn>=1.3.0",
    "gensim>=4.3.0",
    "openpyxl>=3.1.0",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "matplotlib>=3.7.0",
    "wordcloud>=1.9.0",
    "Pillow>=10.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = []
